# fraud-detection

./: .dockerignore  .pdm-python  Dockerfile  Dockerfile-robyn  docker-compose.yml  docker.env  pyproject.toml  requirements.txt
benchmarks/: fastapi_default
data/: test_json.json
notebook/: eda_identities.ipynb  eda_transactions.ipynb  training.ipynb
src/fraud_detection/: requirements-robyn.txt  requirements.txt
src/fraud_detection/inference/: inference.py  loaders.py  main.py  main_robyn.py
src/fraud_detection/preprocessing/: identities.py  inference.py  training.py  transactions.py
src/fraud_detection/utils/: columns.py
tests/: test_entities.py  tests.env
tests/data/: train_identity.csv
