[project]
name = "fraud-detection"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Paolo Sofia", email = "paolosofia6@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL-v3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "scikit-learn>=1.4.1.post1",
    "pandas>=2.2.1",
    "polars>=0.20.15",
    "numpy>=1.26.4",
    "fastapi>=0.110.0",
    "notebook>=7.1.1",
    "pytest>=8.1.1",
    "uvicorn>=0.28.0",
    "python-dotenv>=1.0.1",
    "pyarrow>=15.0.1",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "plotly>=5.19.0",
    "hvplot>=0.9.2",
    "mlflow>=2.11.1",
    "shap>=0.45.0",
    "setuptools>=69.2.0",
    "lightgbm>=4.3.0",
]
